fix: :lipstick: fixed layout issues with grid

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,7 @@
   .base-layout {
     --max-width: 314px;
     --padding: 16px;
+    --padding-full: 32px;
 
     display: grid;
     grid-template-columns:
@@ -45,10 +46,28 @@
 
     @container (width >= 48rem) {
       display: grid;
-      column-gap: 32px;
       justify-content: center;
 
-      grid-template-columns: repeat(3, minmax(0, 350px));
+      grid-template-columns:
+        minmax(32px, 1fr)
+        minmax(0, 350px)
+        32px
+        minmax(0, 350px)
+        32px
+        minmax(0, 350px)
+        minmax(32px, 1fr);
+
+      /* grid-template-columns:
+        minmax(var(--padding), 1fr)
+        repeat(
+          3,
+          (min(var(--max-width), calc(1 / 3 * 100) - var(--padding) * 2))
+        )
+        minmax(var(--padding), 1fr); */
+
+      /* min(var(--padding), 1fr)
+        repeat(3, minmax(0, 350px))
+        min(var(--padding), 1fr); */
       grid-template-rows: repeat(6, minmax(0, 1fr));
     }
   }
